[gd_scene load_steps=4 format=3 uid="uid://dmocxr7vkp3n6"]

[ext_resource type="Script" path="res://Scripts/Projectile.gd" id="1_wfjop"]
[ext_resource type="Texture2D" uid="uid://byepvgxkmtsml" path="res://Sprites/placeholder.png" id="2_q74u5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w37dy"]
radius = 131.529

[node name="projectile" type="Area2D"]
scale = Vector2(0.2, 0.2)
collision_mask = 6
script = ExtResource("1_wfjop")
speed = 300

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2.49999, 0)
scale = Vector2(0.756667, 0.773556)
texture = ExtResource("2_q74u5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_w37dy")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(-6.49999, 5.49999)
scale = Vector2(15.25, 14.45)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
